[+] Ejemplo 1: Carga usando modulos de archivos JavaScript

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <div id="app">
         Empezamos...
     </div>
-
-    <script src="./js/hello.js"></script>       
-    <script src="./js/otherHello.js"></script>  <!-- Reescribe funcion cargada en hello.js (Prueba esta linea encima de hello.js) -->
-    <script src="./js/index.js"></script>
+    
+    <script type="module" src="./js/index.js"></script>
 </body>
 </html>
